--- a/package.json
+++ b/package.json
@@ -10,8 +10,36 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "@chakra-ui/next-js": "^2.2.0",
+    "@chakra-ui/react": "^2.8.1",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "axios": "^1.6.2",
+    "chakra-react-select": "^4.7.5",
+    "countries-and-timezones": "^3.5.2",
+    "date-fns": "^2.30.0",
+    "dayjs": "^1.11.10",
+    "firebase": "^10.6.0",
+    "framer-motion": "^10.16.4",
+    "js-sha256": "^0.10.1",
+    "next": "13.5.4",
+    "next-auth": "4.18.6",
+    "onfido-sdk-ui": "13.8.2",
+    "prettier": "^3.0.3",
+    "react": "^18",
+    "react-countdown": "^2.3.5",
+    "react-datepicker": "^4.21.0",
+    "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
+    "react-google-recaptcha": "^3.1.0",
+    "react-hook-form": "^7.48.2",
+    "react-image-crop": "^10.1.8",
+    "react-window": "^1.8.9",
+    "swr": "^2.2.4",
+    "valibot": "^0.19.0",
+    "viem": "^1.16.5",
+    "wagmi": "^1.2.2",
+    "zustand": "^4.4.6"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
